--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dom-to-image-more": "^3.5.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
